--- a/index.html
+++ b/index.html
@@ -10,18 +10,7 @@
   <script>
     var data;
 
-    function randInt(min, max) {
-      return Math.floor(Math.random() * (max - min) + min)
-    }
-
-    function randomColor() {
-      const colors = [
-        randInt(0, 255),
-        randInt(0, 255),
-        randInt(0, 255)
-      ]
-      return `rgba(${colors.join(', ')}, 1)`
-    }
+    const randomColor = () => `#${Math.floor(Math.random() * 0xffffff).toString(16)}`
 
     $.getJSON("https://sspatari.github.io/kpi-page/data/anonymized_opened_issues.json", function(json) {
       data = Object.keys(json).map(name => {
